[project]
name = "maze"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "icecream>=2.2.0",
    "loguru>=0.7.3",
    "networkx>=3.6.1",
    "wand>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# uv-specific settings (optional)
# You usually don't need anything here for basic usage

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "icecream>=2.2.0",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
